# core

./: .gitignore  Cargo.toml  README.md  flake.nix  rustfmt.toml
.github/workflows/: rust.yml
src/: config.rs  install.rs  logger.rs  main.rs  updater.rs
src/client/: coreclient.rs  masterclient.rs  mod.rs  wtp.rs
src/client/net/: mod.rs  tls.rs  wtp.rs
src/client/net/types/: mod.rs  shared.rs
src/client/net/types/in/: payloads.rs
src/client/types/: headers.rs  mod.rs  payloads.rs
src/client/wpkgclient/: coreclient.rs  masterclient.rs  mod.rs
src/commands/: command.rs  fetchscreen.rs  hello.rs  mod.rs  msg.rs  streamscreen.rs
src/commands/utils/: mod.rs  screen.rs  streamer.rs
src/utils/: install.rs  logger.rs  mod.rs  updater.rs
