[package]
name = "core-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
better-panic = "0.3.0"
figlet-rs = "0.1.5"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
lazy_static = "1.5.0"
uuid = { version = "1.11.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
whoami = "1.5.2"
