[package]
name = "wpkg4"
version = "0.1.0"
edition = "2024"

[dependencies]
better-panic = "0.3.0"
figlet-rs = "0.1.5"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
lazy_static = "1.5.0"
uuid = { version = "1.11.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
whoami = "1.5.2"
anyhow = "1.0.95"
tokio-rustls = "0.26.1"
rustls = "0.23.21"
webpki-roots = "0.26.7"
rustls-pki-types = "1.10.1"
toml = "0.8.19"
dirs = "6.0.0"
async-trait = "0.1.85"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
sha256 = "1.5.0"
hex = "0.4.3"
scap = "0.0.8"
image = "0.25.5"
serde_json = "1.0.139"
